syntax = "proto3";

package crusade;

message TCrusadeCompleteArg {
  uint32 AutoId = 1;
  int32 TaskType = 2;
  int32 Type = 3;
}

message TCrusadeCompleteRet {
  TCrusadeInfoRet TaskList = 1;
  int32 Type = 2;
  int32 TaskId = 3;
  repeated TCrusadeHistoryHero HeroList = 4;
  repeated TCrusadeReward Reward = 5;
  repeated TCrusadeReward RandomReward = 6;
}

message TCrusadeHistoryHero {
  uint32 Id = 1;
  int32 Tid = 2;
}

message TCrusadeHistoryHeroList {
  repeated TCrusadeHistoryHero Fleet = 1;
}

message TCrusadeHistoryRet {
  repeated TCrusadeHistoryHeroList HeroList = 1;
}

message TCrusadeInfo {
  uint32 AutoId = 1;
  int32 TaskId = 2;
  int64 StartTime = 3;
  int64 AcceptTime = 4;
  int32 Status = 5;
  repeated TCrusadeHistoryHero HeroList = 6;
  int32 TaskType = 7;
}

message TCrusadeInfoRet {
  repeated TCrusadeInfo DailyList = 1;
  repeated TCrusadeInfo LimitList = 2;
}

message TCrusadePushMsg {
  repeated TCrusadeInfo TaskList = 1;
}

message TCrusadeReward {
  int32 Type = 1;
  int32 ConfigId = 2;
  int32 Num = 3;
}

message TCrusadeStartArg {
  uint32 AutoId = 1;
  int32 TaskType = 2;
  repeated uint32 HeroList = 3;
}

